[gd_scene load_steps=31 format=2]

[ext_resource path="res://assets/star_09.png" type="Texture" id=1]
[ext_resource path="res://assets/star_02.png" type="Texture" id=2]
[ext_resource path="res://assets/star_08.png" type="Texture" id=3]
[ext_resource path="res://assets/planet02.png" type="Texture" id=4]
[ext_resource path="res://assets/star_06.png" type="Texture" id=5]
[ext_resource path="res://assets/planet09.png" type="Texture" id=6]
[ext_resource path="res://assets/star_07.png" type="Texture" id=7]
[ext_resource path="res://HUB/HUB.gd" type="Script" id=8]
[ext_resource path="res://Fonts/Kenney Future Narrow.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://EncounterHandler/EncounterHandler.gd" type="Script" id=10]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.639216, 0, 1, 1 )
expand_margin_left = 20.0
expand_margin_right = 15.0

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.411765, 0.109804, 0.643137, 1 )
expand_margin_left = 20.0
expand_margin_right = 15.0

[sub_resource type="StyleBoxFlat" id=23]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 0.137255, 0.964706, 1 )
expand_margin_left = 20.0
expand_margin_right = 15.0

[sub_resource type="Theme" id=15]
Button/styles/hover = SubResource( 22 )
Button/styles/normal = SubResource( 14 )
Button/styles/pressed = SubResource( 23 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0941176, 0, 0.211765, 1 )
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=7]
size = 60
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=8]
size = 32
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=9]
size = 32
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=10]
size = 32
font_data = ExtResource( 9 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.847059, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="Theme" id=19]
Button/styles/hover = SubResource( 16 )
Button/styles/normal = SubResource( 17 )
Button/styles/pressed = SubResource( 18 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.639216, 0, 1, 1 )
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=11]
size = 50
font_data = ExtResource( 9 )

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2

[sub_resource type="Theme" id=21]
Button/styles/normal = SubResource( 20 )

[sub_resource type="DynamicFont" id=13]
size = 32
font_data = ExtResource( 9 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 10 )

[node name="Background" type="MarginContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1000.0

[node name="Panel" type="Panel" parent="Background"]
margin_right = 1920.0
margin_bottom = 1000.0
custom_styles/panel = SubResource( 1 )

[node name="ShipIcon" type="MarginContainer" parent="."]
margin_right = 400.0
margin_bottom = 400.0

[node name="Panel" type="Panel" parent="ShipIcon"]
margin_right = 400.0
margin_bottom = 400.0
custom_styles/panel = SubResource( 12 )

[node name="SpaceGraphic" type="MarginContainer" parent="."]
margin_left = 400.0
margin_right = 1920.0
margin_bottom = 400.0

[node name="Star08" type="Sprite" parent="SpaceGraphic"]
position = Vector2( 740, 44 )
scale = Vector2( 0.162109, 0.162109 )
texture = ExtResource( 3 )

[node name="Star02" type="Sprite" parent="SpaceGraphic"]
position = Vector2( 1375, 105 )
scale = Vector2( 0.21875, 0.21875 )
texture = ExtResource( 2 )

[node name="Planet02" type="Sprite" parent="SpaceGraphic"]
position = Vector2( 350, 400 )
scale = Vector2( 0.382812, 0.382812 )
texture = ExtResource( 4 )

[node name="Planet09" type="Sprite" parent="SpaceGraphic"]
position = Vector2( 1026, 146 )
scale = Vector2( 0.0875, 0.0875 )
texture = ExtResource( 6 )

[node name="Star09" type="Sprite" parent="SpaceGraphic"]
position = Vector2( -78, 100 )
scale = Vector2( 0.113769, 0.113769 )
texture = ExtResource( 1 )

[node name="Star07" type="Sprite" parent="SpaceGraphic"]
position = Vector2( 656, 321 )
scale = Vector2( 0.131836, 0.131836 )
texture = ExtResource( 7 )
offset = Vector2( 0, -106.193 )

[node name="Star17" type="Sprite" parent="SpaceGraphic"]
position = Vector2( -222, 292 )
scale = Vector2( 0.131836, 0.131836 )
texture = ExtResource( 7 )
offset = Vector2( 0, -106.193 )

[node name="Star06" type="Sprite" parent="SpaceGraphic"]
position = Vector2( 1218, 344 )
scale = Vector2( 0.189453, 0.189453 )
texture = ExtResource( 5 )

[node name="Star19" type="Sprite" parent="SpaceGraphic"]
position = Vector2( 1043, 1055 )
scale = Vector2( 0.189453, 0.189453 )
texture = ExtResource( 5 )

[node name="Star10" type="Sprite" parent="SpaceGraphic"]
position = Vector2( 407, 99 )
scale = Vector2( 0.0800781, 0.0800781 )
texture = ExtResource( 5 )

[node name="Star11" type="Sprite" parent="SpaceGraphic"]
position = Vector2( 105, 152 )
scale = Vector2( 0.0917969, 0.0917969 )
texture = ExtResource( 5 )

[node name="Star18" type="Sprite" parent="SpaceGraphic"]
position = Vector2( -189, 1050 )
scale = Vector2( 0.0917969, 0.0917969 )
texture = ExtResource( 5 )

[node name="Star03" type="Sprite" parent="SpaceGraphic"]
position = Vector2( 1055, 39 )
scale = Vector2( 0.109375, 0.109375 )
texture = ExtResource( 2 )

[node name="Star12" type="Sprite" parent="SpaceGraphic"]
position = Vector2( 904, 209 )
scale = Vector2( 0.0732422, 0.0732422 )
texture = ExtResource( 3 )

[node name="Star04" type="Sprite" parent="SpaceGraphic"]
position = Vector2( 45, 360 )
scale = Vector2( 0.0488281, 0.0488281 )
texture = ExtResource( 2 )

[node name="Star05" type="Sprite" parent="SpaceGraphic"]
position = Vector2( 1167, 153 )
scale = Vector2( 0.0488281, 0.0488281 )
texture = ExtResource( 2 )

[node name="Star13" type="Sprite" parent="SpaceGraphic"]
position = Vector2( 619, 138 )
scale = Vector2( 0.0488281, 0.0488281 )
texture = ExtResource( 2 )

[node name="Star14" type="Sprite" parent="SpaceGraphic"]
position = Vector2( 837, 349 )
scale = Vector2( 0.0488281, 0.0488281 )
texture = ExtResource( 2 )

[node name="Star15" type="Sprite" parent="SpaceGraphic"]
position = Vector2( 1279, 48 )
scale = Vector2( 0.0488281, 0.0488281 )
texture = ExtResource( 2 )

[node name="Star16" type="Sprite" parent="SpaceGraphic"]
position = Vector2( 1385, 308 )
scale = Vector2( 0.0488281, 0.0488281 )
texture = ExtResource( 2 )

[node name="Attributes" type="MarginContainer" parent="."]
margin_top = 400.0
margin_right = 1400.0
margin_bottom = 1000.0
theme = SubResource( 15 )
script = ExtResource( 8 )

[node name="BackgroundPanel" type="Panel" parent="Attributes"]
margin_right = 1400.0
margin_bottom = 600.0
custom_styles/panel = SubResource( 3 )

[node name="Display" type="VBoxContainer" parent="Attributes"]
margin_right = 1240.0
margin_bottom = 480.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 0

[node name="LevelLabel" type="Label" parent="Attributes/Display"]
margin_right = 1240.0
margin_bottom = 90.0
rect_min_size = Vector2( 1240, 90 )
custom_fonts/font = SubResource( 7 )
text = "  Level: 999
"
autowrap = true
clip_text = true

[node name="ExpLabel" type="Label" parent="Attributes/Display"]
margin_top = 90.0
margin_right = 1240.0
margin_bottom = 180.0
rect_min_size = Vector2( 1240, 90 )
custom_fonts/font = SubResource( 7 )
text = "  Exp: 999/999
"
autowrap = true
clip_text = true

[node name="HullPoints" type="HBoxContainer" parent="Attributes/Display"]
margin_top = 180.0
margin_right = 1240.0
margin_bottom = 240.0
rect_min_size = Vector2( 0, 60 )

[node name="HPLabel" type="Label" parent="Attributes/Display/HullPoints"]
margin_right = 1040.0
margin_bottom = 60.0
rect_min_size = Vector2( 1040, 60 )
custom_fonts/font = SubResource( 7 )
text = "  Hull Points: 99/99"
autowrap = true
clip_text = true

[node name="HPButton" type="Button" parent="Attributes/Display/HullPoints"]
margin_left = 1044.0
margin_right = 1219.0
margin_bottom = 60.0
rect_min_size = Vector2( 175, 60 )
custom_fonts/font = SubResource( 8 )
text = "Level up"

[node name="ShieldPoints" type="HBoxContainer" parent="Attributes/Display"]
margin_top = 240.0
margin_right = 1240.0
margin_bottom = 300.0
rect_min_size = Vector2( 0, 60 )

[node name="ShieldLabel" type="Label" parent="Attributes/Display/ShieldPoints"]
margin_right = 1040.0
margin_bottom = 60.0
rect_min_size = Vector2( 1040, 60 )
custom_fonts/font = SubResource( 7 )
text = "  Shield Points: 99/99"
autowrap = true
clip_text = true

[node name="ShieldButton" type="Button" parent="Attributes/Display/ShieldPoints"]
margin_left = 1044.0
margin_right = 1219.0
margin_bottom = 60.0
rect_min_size = Vector2( 175, 0 )
custom_fonts/font = SubResource( 9 )
text = "Level Up"

[node name="Battery" type="HBoxContainer" parent="Attributes/Display"]
margin_top = 300.0
margin_right = 1240.0
margin_bottom = 360.0
rect_min_size = Vector2( 0, 60 )

[node name="BatteryLabel" type="Label" parent="Attributes/Display/Battery"]
margin_right = 1040.0
margin_bottom = 60.0
rect_min_size = Vector2( 1040, 60 )
custom_fonts/font = SubResource( 7 )
text = "  Energy: 99/99"
autowrap = true
clip_text = true

[node name="BatteryButton" type="Button" parent="Attributes/Display/Battery"]
margin_left = 1044.0
margin_right = 1219.0
margin_bottom = 60.0
rect_min_size = Vector2( 175, 60 )
custom_fonts/font = SubResource( 10 )
text = "Level Up"

[node name="Acceleration" type="HBoxContainer" parent="Attributes/Display"]
margin_top = 360.0
margin_right = 1240.0
margin_bottom = 420.0
rect_min_size = Vector2( 0, 60 )

[node name="AccelLabel" type="Label" parent="Attributes/Display/Acceleration"]
margin_right = 1040.0
margin_bottom = 60.0
rect_min_size = Vector2( 1040, 60 )
custom_fonts/font = SubResource( 7 )
text = "  Acceleration: 10"
autowrap = true
clip_text = true

[node name="AccelButton" type="Button" parent="Attributes/Display/Acceleration"]
margin_left = 1044.0
margin_right = 1219.0
margin_bottom = 60.0
rect_min_size = Vector2( 175, 60 )
custom_fonts/font = SubResource( 10 )
text = "Level Up"

[node name="Handling" type="HBoxContainer" parent="Attributes/Display"]
margin_top = 420.0
margin_right = 1240.0
margin_bottom = 480.0
rect_min_size = Vector2( 0, 60 )

[node name="HandlingLabel" type="Label" parent="Attributes/Display/Handling"]
margin_right = 1040.0
margin_bottom = 60.0
rect_min_size = Vector2( 1040, 60 )
custom_fonts/font = SubResource( 7 )
text = "  Handling: 10"
autowrap = true
clip_text = true

[node name="HandlingButton" type="Button" parent="Attributes/Display/Handling"]
margin_left = 1044.0
margin_right = 1219.0
margin_bottom = 60.0
rect_min_size = Vector2( 175, 60 )
custom_fonts/font = SubResource( 10 )
text = "Level Up"

[node name="Buttons" type="MarginContainer" parent="."]
margin_left = 1400.0
margin_top = 400.0
margin_right = 1920.0
margin_bottom = 1000.0
theme = SubResource( 19 )

[node name="Panel" type="Panel" parent="Buttons"]
margin_right = 520.0
margin_bottom = 600.0
custom_styles/panel = SubResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="Buttons"]
margin_right = 520.0
margin_bottom = 600.0
custom_constants/separation = 0

[node name="ShopButton" type="Button" parent="Buttons/VBoxContainer"]
margin_right = 520.0
margin_bottom = 225.0
rect_min_size = Vector2( 0, 225 )
custom_fonts/font = SubResource( 11 )
text = "Upgrade Shop"

[node name="EncounterButton" type="Button" parent="Buttons/VBoxContainer"]
margin_top = 225.0
margin_right = 520.0
margin_bottom = 450.0
rect_min_size = Vector2( 0, 225 )
theme = SubResource( 21 )
custom_fonts/font = SubResource( 11 )
text = "Next Encounter!"

[node name="BossButton" type="Button" parent="Buttons/VBoxContainer"]
margin_top = 450.0
margin_right = 520.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 150 )
custom_fonts/font = SubResource( 11 )

[node name="Label" type="Label" parent="Buttons/VBoxContainer/BossButton"]
margin_right = 40.0
margin_bottom = 14.0
rect_min_size = Vector2( 520, 150 )
custom_colors/font_color = Color( 1, 0.298039, 0.298039, 1 )
custom_fonts/font = SubResource( 13 )
text = "RIVALMAN
(Recommended Level 10+)"
align = 1
valign = 1

[connection signal="pressed" from="Attributes/Display/HullPoints/HPButton" to="Attributes" method="_on_HPButton_pressed"]
[connection signal="pressed" from="Attributes/Display/ShieldPoints/ShieldButton" to="Attributes" method="_on_ShieldButton_pressed"]
[connection signal="pressed" from="Attributes/Display/Battery/BatteryButton" to="Attributes" method="_on_BatteryButton_pressed"]
[connection signal="pressed" from="Attributes/Display/Acceleration/AccelButton" to="Attributes" method="_on_AccelButton_pressed"]
[connection signal="pressed" from="Attributes/Display/Handling/HandlingButton" to="Attributes" method="_on_HandlingButton_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/ShopButton" to="Attributes" method="_on_ShopButton_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/EncounterButton" to="." method="_on_EncounterButton_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/BossButton" to="." method="_on_BossButton_pressed"]
